--- a/Formatter.Tests/Formatter.Tests.csproj
+++ b/Formatter.Tests/Formatter.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{FCBE7525-43C9-47D8-8B78-10AFEB308793}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MSharp.Code.Formatter.Tests</RootNamespace>
-    <AssemblyName>MSharp.Code.Formatter.Tests</AssemblyName>
+    <RootNamespace>Formatter.Tests</RootNamespace>
+    <AssemblyName>Formatter.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
